[tool.poetry]
name = "mlflow-tracking-server"
version = "0.1.0"
description = "MLflow tracking server"
authors = ["Kıvanç Yüksel <emkademy@gmail.com>"]
repository="https://github.com/kivancyuksel/mlflow-tracking-server.git"
classifiers= []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "==2.5.0"
boto3 = "~=1.3"
psycopg2-binary = "~=2.9.6"
jupyterlab = "~=4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


